Fix overlap issue in mobile view with Flexbox and added media queries

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -97,4 +97,7 @@
     .text-container {
       text-align: justify;
     }
+    .section__text{
+      margin-top: 175px;
+    }
   }
